--- a/keyboard.html
+++ b/keyboard.html
@@ -8,7 +8,7 @@
     <link rel="shortcut icon" href="/assets/favicon.ico">
     <link rel="stylesheet" href="/assets/dcode.css">
     <link rel="stylesheet" href="keyboard/keyboard.css">
-    <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 </head>
 
 <body>
@@ -20,7 +20,7 @@
     </ul>
     <textarea style="position: absolute; top: 130px; right: 30px; width: 300px;"></textarea>
 
-    <div class="keyboard">
+    <!-- <div class="keyboard">
         <div class="keyboard__keys">
             <button type="button" class="keyboard__key">a</button>
             <button type="button" class="keyboard__key keyboard__key--wide">
@@ -36,7 +36,7 @@
                 <i class="material-icons">check_circle</i>
             </button>
         </div>
-    </div>
+    </div> -->
 
     <script src="keyboard/keyboard.js"></script>
 </body>
