--- a/03-my-keyboard/keyboard.html
+++ b/03-my-keyboard/keyboard.html
@@ -22,6 +22,9 @@
             <a href="#latin">Historic / Latin</a>
         </div>
     </div>
+    <div class="textbox">
+        <textarea style="position: relative; top: 1.8rem; left: 1.8rem; width: 48rem; height: 18rem;"></textarea>
+    </div>
 </body>
 
 </html>
