--- a/03-my-keyboard/keyboard.html
+++ b/03-my-keyboard/keyboard.html
@@ -23,7 +23,10 @@
         </div>
     </div>
     <div class="textbox">
-        <textarea style="position: relative; top: 1.8rem; left: 1.8rem; width: 48rem; height: 18rem;"></textarea>
+        <textarea style="position: relative; top: 1.8rem; left: 1.8rem; width: 90%; height: 12rem;"></textarea>
+    </div>
+    <div id="currentInput">
+        <textarea style="position: relative; top: 1.8rem; left: 1.8rem; width: 45%; height: 1rem;" readonly></textarea>
     </div>
 </body>
 
