--- a/03-my-keyboard/keyboard.html
+++ b/03-my-keyboard/keyboard.html
@@ -22,12 +22,12 @@
             <a href="#latin">Historic / Latin</a>
         </div>
     </div>
-    <div class="textbox">
-        <textarea style="position: relative; top: 1.8rem; left: 1.8rem; width: 90%; height: 12rem;"></textarea>
-    </div>
-    <div id="currentInput">
-        <textarea style="position: relative; top: 1.8rem; left: 1.8rem; width: 45%; height: 1rem;" readonly></textarea>
-    </div>
+    <!-- <div class="textbox"> -->
+        <textarea id="typingTextbox" style="position: relative; top: 1.8rem; left: 1.8rem; width: 90%; height: 12rem;"></textarea>
+    <!-- </div> -->
+    <!-- <div id="currentInput"> -->
+        <textarea id="comboBox" style="position: relative; top: 1.8rem; left: 1.8rem; width: 45%; height: 1rem;" readonly></textarea>
+    <!-- </div> -->
 </body>
 
 </html>
