--- a/03-my-keyboard/keyboard.html
+++ b/03-my-keyboard/keyboard.html
@@ -13,7 +13,7 @@
 
 <body>
     <h1>Specialized German Keyboard</h1>
-    <h2>Select Keyboard Format</h2>
+    <!-- <h2>Select Keyboard Format</h2>
     <div class="dropdown">
         <button onclick="myFunction()" class="dropbtn">Dropdown</button>
         <div id="myDropdown" class="dropdown-content">
@@ -21,13 +21,49 @@
             <a href="#historic">Historic</a>
             <a href="#latin">Historic / Latin</a>
         </div>
+    </div> -->
+    <div class="textboxes">
+        <!-- <div class="textbox"> -->
+    <textarea id="typingTextbox"
+    style="position: relative; top: 1.8rem; left: 1.8rem; width: 90%; height: 12rem;"></textarea>
+<!-- </div> -->
+<!-- <div id="currentInput"> -->
+<textarea id="comboBox" style="position: relative; top: 1.8rem; left: 1.8rem; width: 45%; height: 1rem;"
+    readonly></textarea>
+<!-- </div> -->
     </div>
-    <!-- <div class="textbox"> -->
-        <textarea id="typingTextbox" style="position: relative; top: 1.8rem; left: 1.8rem; width: 90%; height: 12rem;"></textarea>
-    <!-- </div> -->
-    <!-- <div id="currentInput"> -->
-        <textarea id="comboBox" style="position: relative; top: 1.8rem; left: 1.8rem; width: 45%; height: 1rem;" readonly></textarea>
-    <!-- </div> -->
+    <div class="specialCharKey">
+        <p class="heavy">
+            SPECIAL COMBOS<br>
+        </p>
+        <p>
+            A+^ → Â <br>
+            a+^ → â <br>
+            A+: → Ä <br>
+            a+: → ä <br>
+            E+' → É <br>
+            e+' → é <br>
+            E+` → È <br>
+            e+` → è <br>
+            E+^ → Ê <br>
+            e+^ → ê <br>
+            E+: → Ë <br>
+            e+: → ë <br>
+            m+- → m̄ <br>
+            n+- → n̄ <br>
+            O+^ → Ô <br>
+            o+^ → ô <br>
+            O+: → Ö <br>
+            o+: → ö <br>
+            s= → ſ <br>
+            S+s → ẞ <br>
+            s+s → ß <br>
+            U+: → Ü <br>
+            u+: → ü <br>
+            Y+: → Ÿ <br>
+            y+: → ÿ
+        </p>
+    </div>
 </body>
 
 </html>
